# epollix

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  deps.txt  epoll.c  epollix.c  epollix.pc.in  epollixConfig.cmake.in  main.c  perf.txt  script.js  server.c  server.h  str.c  str_test.c
docs/: epollix.md  perf.txt
example/: CMakeLists.txt  main.c  main.cpp  routes.c
example/assets/: index.html  main.c
http/: context.h  headers.c  headers.h  http.c  http.h  map.c  map.h  method.c  method.h  mime.c  mime.h  request.c  request.h  response.c  response.h  router.c  router.h  server.c  server.h  str.c  str.h  threadpool.c  url.c  url.h
include/: automem.h  constants.h  cpufeatures.h  crypto.h  defer.h  epollix.h  fast_str.h  gzip.h  header.h  headers.h  http.h  jwt.h  kv.h  logging.h  method.h  middleware.h  mime.h  multipart.h  net.h  params.h  request.h  response.h  route.h  server.h  static.h  status.h  taskpool.h  types.h  url.h  urlencoded.h
include/middleware/: basicauth.h  logger.h  tokenauth.h
include/mw/: basicauth.h  logger.h  tokenauth.h
middleware/: basicauth.c  basicauth.h  logger.c  logger.h  tokenauth.c  tokenauth.h
rust/rcore/: Cargo.toml  README.md  build.sh  main.c  rcore.h
rust/rcore/src/: lib.rs
src/: crypto.c  epollix.c  fast_str  fast_str.c  gzip.c  header.c  headers.c  http.c  jwt.c  method.c  middleware.c  mime.c  multipart.c  multipart.h  net.c  params.c  request.c  response.c  route.c  server.c  server2.c  static.c  status.c  taskpool.c  url.c  urlencoded.c
src/middleware/: basicauth.c  logger.c  tokenauth.c
src/mw/: basicauth.c  logger.c  tokenauth.c
tests/: CMakeLists.txt  crypto_test.c  epollix_test.c  gzip_test.c  map_test.c  mime_test.c
tpool/: main.c  server.c  server.h  threadpool.c
